[tool.poetry]
name = "notion-load"
version = "0.1.1"
description = "Load Notion database content into a Qdrant vector database"
authors = ["John Day <johntday@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"

python-dotenv = "1.0.0"
requests = "^2.31.0"
langchain = "^0.0.314"
openai = "^0.28.1"
pypdf = "^3.16.2"
"pdfminer.six" = "^20221105"
tiktoken = "^0.5.1"
pandas = "^2.1.1"
notion_utils = { git = "https://github.com/johntday/notion-utils.git" }
qdrant-client = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
